# sphinx-mekki

./: LICENSE  README.rst  pyproject.toml
sphinx_mekki/: __init__.py
sphinx_mekki/_static/: mekki_handle_download.js
sphinx_mekki/themes/mekki/: layout.html  localtoc.html  theme.conf
sphinx_mekki/themes/mekki/static/: mekki.css_t
